[package]
name = "tcp-ip"
version = "0.1.0"
edition = "2021"

[lib]
name = "sockets"
crate-type = ["staticlib"]
path = "src/lib_socket.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.15.0"
dashmap = "5.5.3"
ifstructs = "0.1.1"
libc = "0.2.153"
rand = "0.8.5"
tun-tap = "0.1.4"
